# test-dependabot-python

./: pyproject.toml
.github/workflows/: test.yml
